# CosmicWatch-ventidue

./: .gitattributes  .gitignore  .gitmodules  README.md
kicad/: BOM.ods  CosmicWatch-ventidue.csv  CosmicWatch-ventidue.kicad_pcb  CosmicWatch-ventidue.sch  (+14 more)
software/arduino/: CMakeLists.txt  arduino.ino  arduino.ino.BAK
software/arduino/data/fonts/droid-sans/: DroidSans.ttf.h  DroidSans_Bold.ttf.h
software/arduino/data/fonts/verdana/: Verdana.ttf.h
software/arduino/data/splash/: demo.raw.h  demo.xcf
software/arduino/lib/graphics/: CMakeLists.txt
software/arduino/lib/graphics/src/: file_writer.cpp
software/arduino/lib/graphics/tests/other/: simple_demo.cpp
software/arduino/lib/oled/: CMakeLists.txt  DEV_Config.h  OLED_1in5_rgb.ino
software/arduino/src/: file_writer.h
software/arduino/src/graphics/: types.h  vector.cpp  vector.h
software/arduino/src/graphics/algorithms/: primitive_drawer.h  sdf_combiantorics.h  sdf_generators.h  sdf_primitives.h  sdf_transformations.h
software/arduino/src/graphics/driver/: OLED_1_5INCH_128x128.h
software/arduino/src/graphics/font/: font.cpp  font.h
software/arduino/src/graphics/renderer/: assets.h  sdf_mix.h  stream_converters.h
software/arduino/src/graphics/ui/: style.h  tiling.cpp  tiling.h  widgets.cpp  widgets.h
software/arduino/src/lib/stb/: stb_truetype.h
software/arduino/test_io/: test_io.ino
software/arduino/tests/other/: font.cpp  simple_demo.cpp  simple_teensy_demo.cpp  splash.cpp  test_sdf.cpp  widget.cpp
software/arduino/tests/test_io/: test_io.ino
software/arduino/tests/test_io/src/: lib
(+235 files in other folders)
